# Torch-practice

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yaml  pre-commit-config.yaml
1-Basics/: tensors_example.ipynb
2-CIFAR10-classification/cfar10/: README.md  pyproject.toml
2-CIFAR10-classification/cfar10/notebooks/: digit-classification.ipynb
Basics/: tensor.ipynb  tensors.ipynb  tensors_example.ipynb
